# api/src/dto/game.dto.ts
@@ -1,0 +1,7 @@
+export interface GameHistoryDTO {
+    gameId: number;
+    whitePlayerName: string;
+    blackPlayerName: string;
+    isPublic: boolean;
+    status: string;
+  }
